--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
     <div id="arrow3" style="display: none"></div>
     <div id="arrow4" style="display:none"></div>
     <div id="htmlform1" style="display: none">
-      <div id="diffform">
+      <div class="diffform">
         <form name="myform" method="post" action="login.php" class="grey">
           <table>
             <caption>
@@ -64,7 +64,7 @@
     </div>
   </div>
   <div id="htmlform2" style="display:none">
-    <div id="diffform">
+    <div class="diffform">
       <form name="myform" method="post" action="reg.php" class="grey">
         <table>
           <caption>
@@ -152,7 +152,7 @@
     <div class="close">&nbsp;&nbsp;&nbsp;</div>
   </div>
   <div id="htmlform4" style="display: none">
-    <div id="diffform">
+    <div class="diffform">
       <form name="myform" method="post" action="change_status.php"
 	class="grey">
         <table>
