--- a/templates/index.html
+++ b/templates/index.html
@@ -248,6 +248,11 @@
           <p>想上picasa看看出国留学的哥们儿分享的照片嘛？？</p>
           <!--a href="#">Link #4</a-->
         </div>
+        <div><img src="images/happy.jpg" alt="picasa snapshot" />
+          <p>Happy birthday!</p>
+          <!--a href="#">Link #4</a-->
+        </div>
+
       </div>
     </div>
     <div id="webproxy">
