--- a/trunk/templates/index.html
+++ b/trunk/templates/index.html
@@ -12,9 +12,10 @@
 <title>翻墙 SSH代理 VPN代理 网页代理 高速美国主机代理</title>
 </head>
 <body>
-<div id="header"><a href="index.php" id="logo"></a></div>
-<div id="status_small" style="display: none"></div>
+<div id="status_small" style="display:none">xxx 退出</div>
 <div id="status_large" style="display: none"></div>
+<div id="header"><a href="index.php" id="logo"></a>
+</div>
 <div id="wrap">
   <div id="navigator">
     <div id="menu">
@@ -29,7 +30,7 @@
     <div id="arrow2" style="display: none"></div>
     <div id="arrow3" style="display: none"></div>
     <div id="arrow4" style="display:none"></div>
-    <div id="htmlform1" style="display: none">
+    <div id="htmlform1" style="display:none">
       <div class="diffform">
         <form name="myform" method="post" action="login.php" class="grey">
           <table>
@@ -37,7 +38,7 @@
             用户登陆
             </caption>
             <tr>
-              <td align="right" width="40%">用户名</td>
+              <td align="right" width="100px">用户名</td>
               <td align="left"><input name="id" type="text" value=""
 			style="width: 150px" /></td>
             </tr>
@@ -48,7 +49,7 @@
             </tr>
             <tr>
               <td align="right">输入验证码</td>
-              <td align="left"><input name="yz" type="text" value="" />
+              <td align="left"><input name="yz" type="text" value="" style="width: 50px"/>
                 <img src="yz.php" align="absmiddle" /></td>
             </tr>
             <tr>
@@ -70,33 +71,41 @@
           <caption>
           用户注册
           </caption>
-          <tr align="center">
-            <td align="right" width="45%"><span style="color: #F00">*</span>用户名：</td>
-            <td align="left"><input name="id" type="text" value="" /></td>
+          <tr>
+            <td align="right" width="100px"><span style="color: #F00">*</span>用户名：</td>
+            <td align="left"><input name="id" type="text" value="" style="width: 150px"/></td>
           </tr>
           <tr>
-            <td align="right"><span style="color: #F00">*</span>登陆密码：</td>
-            <td align="left"><input name="pw" type="password" value="" /></td>
+          	<td></td>
+          	<td align="left" style="padding:0px; padding-left:8px; color:#999; font-size:90%">请使用邮箱地址作为用户名</td>
           </tr>
           <tr>
-            <td align="right"><span style="color: #F00">*</span>再次输入登陆密码：</td>
-            <td align="left"><input name="pw2" type="password" value="" /></td>
+            <td align="right"><span style="color: #F00">*</span>登录密码：</td>
+            <td align="left"><input name="pw" type="password" value="" style="width: 150px"/></td>
+          </tr>
+          <tr>
+          	<td></td>
+          	<td align="left" style="padding:0px; padding-left:8px; color:#999; font-size:90%">密码长度6～14位，字母区分大小写</td>
+          </tr>
+          <tr>
+            <td align="right"><span style="color: #F00">*</span>确认登录密码：</td>
+            <td align="left"><input name="pw2" type="password" value=""  style="width: 150px"/></td>
           </tr>
           <tr>
             <td align="right">旺旺账号：</td>
-            <td align="left"><input name="taobao_name" type="text" value="" /></td>
+            <td align="left"><input name="taobao_name" type="text" value=""style="width: 150px"/></td>
           </tr>
           <tr>
             <td align="right">QQ：</td>
-            <td align="left"><input name="qq" type="text" value="" /></td>
+            <td align="left"><input name="qq" type="text" value="" style="width: 150px"/></td>
           </tr>
           <tr>
             <td align="right">E-mail：</td>
-            <td align="left"><input name="email" type="text" value="" /></td>
+            <td align="left"><input name="email" type="text" value=""  style="width: 150px"/></td>
           </tr>
           <tr>
             <td align="right">输入验证码：</td>
-            <td align="left"><input name="yz" type="text" value="" />
+            <td align="left"><input name="yz" type="text" value=""  style="width: 50px"/>
               <img src="yz.php" align="absmiddle" /></td>
           </tr>
           <tr>
@@ -270,7 +279,7 @@
 <div id="bottom">
   <p>Copyright：fan-qiang.com</p>
 </div>
-<-script language="javascript" type="text/javascript" src="http://js.users.51.la/3904713.js"></script>
+<script language="javascript" type="text/javascript" src="http://js.users.51.la/3904713.js"></script>
 <noscript><a href="http://www.51.la/?3904713" target="_blank"><img alt="&#x6211;&#x8981;&#x5566;&#x514D;&#x8D39;&#x7EDF;&#x8BA1;" src="http://img.users.51.la/3904713.asp" style="border:none" /></a></noscript>
 </body>
 </html>
