--- a/trunk/templates/index.html
+++ b/trunk/templates/index.html
@@ -77,7 +77,7 @@
           </tr>
           <tr>
           	<td></td>
-          	<td align="left" style="padding:0px; padding-left:8px; color:#999; font-size:90%">请使用邮箱地址作为用户名</td>
+          	<td align="left" style="padding:0px; padding-left:8px; color:#999; font-size:90%">4至20个字符(包括字母、数字、下划线)，且必须以英文字母开始。如example2010</td>
           </tr>
           <tr>
             <td align="right"><span style="color: #F00">*</span>登录密码：</td>
