--- a/templates/index.html
+++ b/templates/index.html
@@ -24,6 +24,7 @@
         <li><a href="#" id="regbutton"><span>注&nbsp;册</span></a></li>
         <li><a href="#" id="helpbutton"><span><font color=red>购买疑问</font></span></a></li>
         <li><a href="#" id="pricebutton"><span><font color=blue>购买费用</font></span></a></li>
+        <li><a href="templates/help.html">使用帮助</a></li>
       </ul>
     </div>
     <div id="arrow1" style="display:none"></div>
@@ -124,12 +125,12 @@
       <p>答：我国到美国部分地区的出口确实会阶段性的出现问题。正是因为有此问题，我们现有四台服务器分布在美国国东西海岸成犄角之势，保证您时刻稳定的墙外生活。</p>
       <p class="q">2,服务器速度怎么样？</p>
       <p>答：我看YOUTUBE反正是不卡，看广告不如看疗效，注册个用户试一下就OK了~</p>
-      <p class="q">3,出墙教程在哪？</p>
+      <!--p class="q">3,出墙教程在哪？</p>
       <p>答：myentunnel+firefox的教程在 <a href="http://blog.licess.org/myentunnel-firefox-foxyproxy-ssh/">这里</a>。
         myentunnel对速度有限制，如果您主要是看YOUTUBE的话建议换成tunnelier,教程在<a href="http://www.appinn.com/bitvise-tunnelier//">这里</a></p>
       <p class="q">4,MAC系统怎么办？</p>
-      <p>答：使用ISSH+FIREFOX，教程在 <a href="http://issh.us/viewthread.php?tid=2">这里</a>。</p>
-      <p class="q">5,有其他疑问怎么办？</p>
+      <p>答：使用ISSH+FIREFOX，教程在 <a href="http://issh.us/viewthread.php?tid=2">这里</a>。</p-->
+      <p class="q">3,有其他疑问怎么办？</p>
       <p>答：联系我吧！旺旺:kecker QQ:58287926 一般都在，欢迎来询~</p>
     </div>
     <div class="close">&nbsp;&nbsp;&nbsp;</div>
