--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
         <li><a href="#" id="regbutton"><span>注&nbsp;册</span></a></li>
         <li><a href="#" id="helpbutton"><span><font color=red>购买疑问</font></span></a></li>
         <li><a href="#" id="pricebutton"><span><font color=blue>购买费用</font></span></a></li>
-        <li><a href="templates/help.html">使用帮助</a></li>
+        <li><a href="templates/help.html"><span>使用帮助</span></a></li>
       </ul>
     </div>
     <div id="arrow1" style="display:none"></div>
