--- a/templates/index.html
+++ b/templates/index.html
@@ -68,7 +68,7 @@
   <div id="htmlform2" style="display:none">
     <div class="diffform">
       <form name="myform" method="post" action="reg.php" class="grey">
-        <table>
+        <table width="400px">
           <caption>
           ÓÃ»§×¢²á
           </caption>
