--- a/trunk/templates/help.html
+++ b/trunk/templates/help.html
@@ -3,6 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=gbk" />
 <link href="../css/main.css" type="text/css" rel="stylesheet" />
+<script src="../js/jquery-1.3.2.min.js" type="text/javascript"></script>
 <title>翻墙 SSH代理 VPN代理 网页代理 高速美国主机代理 使用帮助</title>
 </head>
 <body>
@@ -11,7 +12,7 @@
 <div id="header"><a href="index.php" id="logo"></a></div>
 <div id="wrap">
     <div class="Section1">
-    <div style="float:right;"><a href="../index.php" style="color:#999">返回首页</a></div>
+    <div id="fixed"><a href="../index.php" style="color:#333">返回首页</a></div>
       <h3>MyEnTunnel+FireFox+FoxyProxy通过帐号翻墙教程</h3>
       <h4>1.安装配置MyEnTunnel：</h4>
       <p class="helpcontent">首先下载<a href="../soft/myentunnel.rar" title="点击下载">MyEnTunnel</a>，解压后，运行myentunnle.exe。填写得到的服务器，用户名称和密码。端口写7070。</p>
@@ -64,4 +65,25 @@ src="../images/翻墙教程img/image014.jpg" alt="Proxy Switchy界面"></p>
   <p>Copyright：fan-qiang.com</p>
 </div>
 </body>
+<script language="javascript">
+$(function() {
+    var $sidebar   = $("#fixed"),
+        $window    = $(window),
+        offset     = $sidebar.offset(),
+        topPadding = 15;
+ 
+    $window.scroll(function() {
+        if ($window.scrollTop() > offset.top) {
+            $sidebar.stop().animate({
+                marginTop: $window.scrollTop() - offset.top + topPadding
+            });
+        } else {
+            $sidebar.stop().animate({
+                marginTop: 0
+            });
+        }
+    });
+ 
+});
+</script>
 </html>
