--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
 <script src="js/jquery-1.3.2.min.js" type="text/javascript"></script>
 <script src="js/jquery.easing.pack.js" type="text/javascript"></script>
 <script src="js/jquery.siteFeature2.pack.js" type="text/javascript"></script>
+<script src="js/formvalidation.js" type="text/javascript"></script>
 <script src="js/main.js" type="text/javascript"></script>
 <title>翻墙 SSH代理 VPN代理 网页代理 高速美国主机代理</title>
 </head>
@@ -161,7 +162,7 @@
     </div>
     <div class="close">&nbsp;&nbsp;&nbsp;</div>
   </div>
-  <div id="htmlform4" style="display: none">
+  <!--div id="htmlform4" style="display: none">
     <div class="diffform">
       <form name="myform" method="post" action="change_status.php"
 	class="grey">
@@ -230,7 +231,7 @@
       </form>
     </div>
     <div class="close">&nbsp;&nbsp;&nbsp;</div>
-  </div>
+  </div-->
   <div id="content">
     <div id="slide">
       <h3><font color=blue>现在注册即可得三天免费试用账号</font>，试试看不卡壳的YOUTUBE吧~！<br>
