--- a/templates/login.html
+++ b/templates/login.html
@@ -3,10 +3,12 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=gbk" />
 <link type="text/css" href="css/main.css" rel="stylesheet" />
+<script src="js/jquery-1.3.2.min.js" type="text/javascript"></script>
+<script src="js/formvalidation.js" type="text/javascript"></script>
 </head>
 <div id="header"></div>
 <div id="wrap">
-<form name="myform" method="post" action="login.php">
+<form name="myform" method="post" action="login.php" class="grey">
 <table class="form">
 <caption>用户登陆</caption>
 	<tr>
@@ -19,16 +21,33 @@
 	</tr>
 	<tr>
 		<td align="right">输入验证码：</td>
-		<td align="left"><input name="yz" type="text" value="" /><img
+		<td align="left"><input name="yz" type="text" value="" style="width: 50px"/><img
 			src="yz.php" align="absmiddle" /></td>
 	</tr>
 	<tr>
     	<td></td>
 		<td align="left">
-        <input name="tijiao" type="submit" value="登录" class ="tijiao"/> <a href="reg.php" style="font-size:105%">注册</a>
+        <input name="tijiao" type="submit" value="" class ="login"/> <a href="reg.php" style="font-size:105%">注册</a>
         </td>
 	</tr>
 </table>
 </form>
 </div>
+<script language="javascript">
+$(document).ready(function() {
+	$("form[name='myform'] input[name='id']").blur(function(){$(this).checkform('',true);});
+	$("form[name='myform'] input[name='pw']").blur(function(){$(this).checkform('',true);});
+	$("form[name='myform'] input[name='yz']").blur(function(){$(this).checkform('yz',true);});
+	$("form[name='myform']").submit(function(){
+	if($("form[name='myform'] input[name='id']").checkform('',true) && 
+	   $("form[name='myform'] input[name='pw']").checkform('',true) &&	
+	   $("form[name='myform'] input[name='yz']").checkform('yz',true)){ 
+		$("form[name='myform']").submit();
+	}
+	else {
+		return false;
+	}
+});
+});
+</script>
 </html>
