--- a/templates/login.html
+++ b/templates/login.html
@@ -6,6 +6,7 @@
 <script src="js/jquery-1.3.2.min.js" type="text/javascript"></script>
 <script src="js/formvalidation.js" type="text/javascript"></script>
 </head>
+<body>
 <div id="header"></div>
 <div id="wrap">
 <form name="myform" method="post" action="login.php" class="grey">
@@ -33,21 +34,7 @@
 </table>
 </form>
 </div>
-<script language="javascript">
-$(document).ready(function() {
-	$("form[name='myform'] input[name='id']").blur(function(){$(this).checkform('',true);});
-	$("form[name='myform'] input[name='pw']").blur(function(){$(this).checkform('',true);});
-	$("form[name='myform'] input[name='yz']").blur(function(){$(this).checkform('yz',true);});
-	$("form[name='myform']").submit(function(){
-	if($("form[name='myform'] input[name='id']").checkform('',true) && 
-	   $("form[name='myform'] input[name='pw']").checkform('',true) &&	
-	   $("form[name='myform'] input[name='yz']").checkform('yz',true)){ 
-		$("form[name='myform']").submit();
-	}
-	else {
-		return false;
-	}
-});
-});
+</body>
+<script language="javascript" type="text/javascript" src="js/login.js">
 </script>
 </html>
