--- a/templates/status.html
+++ b/templates/status.html
@@ -5,7 +5,7 @@
 <link type="text/css" href="css/main.css" rel="stylesheet" />
 <script src="js/jquery-1.3.2.min.js" type="text/javascript"></script>
 </head>
-
+<body>
 <div id="header"></div>
 <div id="wrap">
   <form name="myform" method="post" action="change_status.php" class="grey">
@@ -112,22 +112,7 @@
     </table>
   </form>
 </div>
-<script language="javascript">
-$(document).ready(function() {
-	$("form[name='pay']").submit(function(){
-		alert($(":radio:checked").val());
-		//return false;
-	if($(":radio:checked").val() == undefined){
-			if(!$(".pay").next().is("span")){
-				$(".pay").after("<span class='errormsg'>ÇëÑ¡ÔñÒ»Ïî</span>");
-				return false;
-			}
-	}
-	else{
-		$("form[name='pay']").submit();
-	}
-		
-	});
-});
+</body>
+<script language="javascript" src="js/status.js">
 </script>
 </html>
