--- a/templates/status.html
+++ b/templates/status.html
@@ -106,8 +106,8 @@
       </tr>
       <input name="name" type="hidden" value="{$name}" />
       <tr>
-        <td></td>
-        <td align="left"><input type="submit" value="" class="pay" /></td>
+        <td align="right"><img src="images/logo-alipay-t.png" width="96" height="37" /></td>
+        <td align="left"><input type="submit" value="Ö§¸¶±¦µ£±£Ö§¸¶"  class="pay"/></td>
       </tr>
     </table>
   </form>
