--- a/templates/index.html
+++ b/templates/index.html
@@ -271,7 +271,7 @@
     </div>
     <div id="webproxy">
       <h3>网页代理入口
-        <form action="http://ssh1.fan-qiang.com/sshweb/webproxy/includes/process.php?action=update" method="post"
+        <form action="includes/process.php?action=update" method="post"
 	class="form">
           <input type="text" name="u" id="inputurl" size="30"
 	class="textbox" value="请输入网址...">
