修改help页面，去掉myentunnel

--- a/templates/help.html
+++ b/templates/help.html
@@ -13,11 +13,20 @@
 <div id="wrap">
     <div class="Section1">
     <div id="fixed"><a href="../index.php" style="color:#333">返回首页</a></div>
-      <h3>MyEnTunnel+FireFox+FoxyProxy通过帐号出墙教程</h3>
-      <h4>1.安装配置MyEnTunnel：</h4>
-      <p class="helpcontent">首先下载<a href="../soft/myentunnel.rar" title="点击下载">MyEnTunnel</a>，解压后，运行myentunnle.exe。填写得到的服务器，用户名称和密码。端口写7070。</p>
-      <p class="helpimg"><img width=474 height=298 id="图片 1" src="../images/出墙教程img/image001.jpg" alt="myentunnel界面" /></p>
-      <p class="helpcontent">填写好后，点击上图左下角的连接按钮，在弹出的对话框中选YES。连接成功后任务栏的小锁变绿，如图<img width=26 height=27 id="图片 4" src="../images/出墙教程img/image002.jpg">。这样MyEnTunnel就配置好了。</p>
+      <h3>Tunnelier+FireFox+FoxyProxy通过帐号出墙教程</h3>
+      <h4>1.安装配置Tunnelier：</h4>
+      
+      <p class="helpcontent">下载<a href="../soft/Tunnelier-Inst.rar" title="点击下载tunnelier">Tunnelier</a>，运行，如下图填写</p>
+      <p class="helpimg"><img border=0 width=560 height=560 id="图片 40"
+src="../images/出墙教程img/image010.jpg" alt="Tunnelier界面"></p>
+      
+      <p class="helpcontent">第二个Options右边的√都去掉</p>
+      <p  class="helpimg"><img border=0 width=554 height=557 id="图片 58"
+src="../images/出墙教程img/image012.jpg"  alt="Tunnelier界面"></p>
+      <p class="helpcontent" >本地端口写7070</p>
+      <p  class="helpimg"><img border=0 width=560 height=560 id="图片 55"
+src="../images/出墙教程img/image013.jpg" alt="Tunnerlier界面"></p>
+      <p class="helpcontent">点下面的Login就可以了。</p>
       <h4>2.安装配置FireFox+FoxyProxy：</h4>
       <p class="helpcontent">从<a href="http://www.mozillaonline.com/" title="点击下载firefox">http://www.mozillaonline.com/</a>上下载最新版FireFox，安装后，再下载<a href="../soft/foxyproxy_basic-1.6.1-fx+sm+tb.xpi" title="点击下载foxproxy">FoxyProxy</a>，把FoxyProxy拖拽到打开的FireFox里面安装。</p>
       <p class="helpcontent">在FireFox下面的状态栏里找到FoxyProxy的狐狸头<img border=0 width=131 height=25 id="图片 7"
@@ -41,19 +50,8 @@ src="../images/出墙教程img/image008.jpg" alt="autoproxy设置界面"></p>
       <p class="helpcontent">启动全局模式，就可以了。</p>
       <p class="helpimg"><img border=0 width=256 height=198 id="图片 28"
 src="../images/出墙教程img/image009.jpg" alt="autoproxy设置界面"></p>
-      <h4>3.使用Tunnelier</h4>
-      <p class="helpcontent">如果您主要想翻出去看YOUTUBE等对网速要求比较高的网站，建议把MyEntunnel换成<span style="color:#333; font-weight:bold">Tunnelier</span>。速度能快许多。下面是Tunnelier的配置方法。</p>
-      <p class="helpcontent">下载<a href="../soft/Tunnelier-Inst.rar" title="点击下载tunnelier">Tunnelier</a>，运行，如下图填写</p>
-      <p class="helpimg"><img border=0 width=560 height=560 id="图片 40"
-src="../images/出墙教程img/image010.jpg" alt="Tunnelier界面"></p>
+      <h4>3.不用firefox想使用chrome或者其它浏览器</h4>
       
-      <p class="helpcontent">第二个Options右边的√都去掉</p>
-      <p  class="helpimg"><img border=0 width=554 height=557 id="图片 58"
-src="../images/出墙教程img/image012.jpg"  alt="Tunnelier界面"></p>
-      <p class="helpcontent" >本地端口写7070</p>
-      <p  class="helpimg"><img border=0 width=560 height=560 id="图片 55"
-src="../images/出墙教程img/image013.jpg" alt="Tunnerlier界面"></p>
-      <p class="helpcontent">点下面的Login就可以了。</p>
       <p class="helpcontent">如果不想用Firefox想用Chrome出墙的话，下载Proxy Switchy这款插件，如下图填写就可以了。</p>
       <p class="helpimg"><img border=0 width=529 height=524 id="图片 61"
 src="../images/出墙教程img/image014.jpg" alt="Proxy Switchy界面"></p>
