修改关键词

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
 <script src="js/main.js" type="text/javascript"></script>
 
 
-<title>出墙 SSH代理 VPN代理 网页代理 高速美国主机代理</title>
+<title>SSH代理 VPN代理 网页代理 高速美国主机代理</title>
 </head>
 <body>
 
@@ -126,14 +126,10 @@
   <div id="qanda" style="display:none">
     <div id="qanda1">
       <p class="q">1,服务器稳定么？</p>
-      <p>答：我国到美国部分地区的出口确实会阶段性的出现问题。正是因为有此问题，我们现有四台服务器分布在美国国东西海岸成犄角之势，保证您时刻稳定的墙外生活。</p>
+      <p>答：我国到美国部分地区的出口确实会阶段性的出现问题。正是因为有此问题，我们现有四台服务器分布在美国国东西海岸成犄角之势，保证您时刻稳定的wall外生活。</p>
       <p class="q">2,服务器速度怎么样？</p>
-      <p>答：我看YOUTUBE反正是不卡，看广告不如看疗效，注册个用户试一下就OK了~</p>
-      <!--p class="q">3,出墙教程在哪？</p>
-      <p>答：myentunnel+firefox的教程在 <a href="http://blog.licess.org/myentunnel-firefox-foxyproxy-ssh/">这里</a>。
-        myentunnel对速度有限制，如果您主要是看YOUTUBE的话建议换成tunnelier,教程在<a href="http://www.appinn.com/bitvise-tunnelier//">这里</a></p>
-      <p class="q">4,MAC系统怎么办？</p>
-      <p>答：使用ISSH+FIREFOX，教程在 <a href="http://issh.us/viewthread.php?tid=2">这里</a>。</p-->
+      <p>答：我看U2BE反正是不卡，看广告不如看疗效，注册个用户试一下就OK了~</p>
+      
       <p class="q">3,有其他疑问怎么办？</p>
       <p>答：联系我吧！旺旺:kecker QQ:58287926 一般都在，欢迎来询~</p>
     </div>
@@ -237,14 +233,14 @@
   </div-->
   <div id="content">
     <div id="slide">
-      <h3><font color=blue>现在注册即可得三天免费试用账号</font>，试试看不卡壳的YOUTUBE吧~！<br>
+      <h3><font color=blue>现在注册即可得三天免费试用账号</font>，试试看不卡壳的U2B吧~！<br>
         服务水平大升级！<font color=blue>账号可以在4个不同的服务器上使用</font>，且机房贯穿美国东西部，您可以选择您用着最快的！ <br>
         现有服务器: <br>
-        ssh1.fan-qiang.com (洛杉矶，<font color=red>推荐</font>) <br>
-        ssh2.fan-qiang.com (宾西法尼亚) <br>
-        ssh3.fan-qiang.com (宾西法尼亚) <br>
-        ssh6.fan-qiang.com (奥兰多，<font color=red>推荐</font>) <br>
-        您可以使用fan-qiang.com自助购买续费，全部自动发货！<br></h3>
+        1.ssh0.com (洛杉矶，<font color=red>推荐</font>) <br>
+        2.ssh0.com (宾西法尼亚) <br>
+        3.ssh0.com (宾西法尼亚) <br>
+        6.ssh0.com (奥兰多，<font color=red>推荐</font>) <br>
+        您可以使用ssh0.com自助购买续费，全部自动发货！<br></h3>
       <div id="preFeature2" style="border: 5px solid #666">
         <div><img src="images/twitter.jpg" alt="twitter snapshot" />
           <p>想上twitter看看您喜欢的明星天天在干什么嘛？</p>
@@ -263,7 +259,7 @@
           <!--a href="#">Link #4</a-->
         </div>
         <div><img src="images/happy.jpg" alt="picasa snapshot" />
-          <p>Happy birthday!</p>
+          <p>来使用我们的SSH号吧~</p>
           <!--a href="#">Link #4</a-->
         </div>
 
@@ -287,7 +283,7 @@
 </div>
 
 <div id="bottom">
-  <p>Copyright：fan-qiang.com</p>
+  <p>Copyright：ssh0.com</p>
 </div>
 <script language="javascript" type="text/javascript" src="http://js.users.51.la/3904713.js"></script>
 <noscript><a href="http://www.51.la/?3904713" target="_blank"><img alt="&#x6211;&#x8981;&#x5566;&#x514D;&#x8D39;&#x7EDF;&#x8BA1;" src="http://img.users.51.la/3904713.asp" style="border:none" /></a></noscript>
