修改里面的URL

--- a/templates/status.html
+++ b/templates/status.html
@@ -67,19 +67,19 @@
       </tr>
       <tr>
         <td align="right">服务器1：</td>
-        <td align="left">ssh1.fan-qiang.com (洛杉矶，推荐)</td>
+        <td align="left">1.ssh0.com (洛杉矶，推荐)</td>
       </tr>
       <tr>
         <td align="right">服务器2：</td>
-        <td align="left">ssh2.fan-qiang.com (宾西法尼亚)</td>
+        <td align="left">2.ssh0.com (宾西法尼亚)</td>
       </tr>
       <tr>
         <td align="right">服务器3：</td>
-        <td align="left">ssh3.fan-qiang.com (宾西法尼亚)</td>
+        <td align="left">3.ssh0.com (宾西法尼亚)</td>
       </tr>
       <tr>
         <td align="right">服务器6：</td>
-        <td align="left">ssh6.fan-qiang.com (奥兰多)</td>
+        <td align="left">4.ssh0.com (奥兰多，推荐)</td>
       </tr>
 
       <tr>
